--- a/index.html
+++ b/index.html
@@ -136,27 +136,17 @@
     <!-- ANIMAL WITH HEART -->
     <svg class="art" viewBox="0 0 320 240" xmlns="http://www.w3.org/2000/svg">
       <defs>
-        <linearGradient id="fur" x1="0" x2="1">
-          <stop offset="0" stop-color="#f7c7a1"/>
-          <stop offset="1" stop-color="#f2a97b"/>
-        </linearGradient>
         <linearGradient id="heart" x1="0" x2="1">
           <stop offset="0" stop-color="#ff4d7d"/>
           <stop offset="1" stop-color="#ff1f68"/>
         </linearGradient>
       </defs>
 
-      <path d="M250 50 C250 33 270 25 282 38
-               C294 25 314 33 314 50
-               C314 78 282 92 282 106
-               C282 92 250 78 250 50Z"
-            fill="url(#heart)"/>
-
       <path d="M90 120 C90 70 140 40 190 60
                C240 40 290 70 290 120
                C290 180 240 210 190 210
                C140 210 90 180 90 120Z"
-            fill="url(#fur)"/>
+            fill="url(#heart)"/>
 
       <path d="M110 92 L95 55 L140 78 Z" fill="#f2a97b"/>
       <path d="M270 92 L285 55 L240 78 Z" fill="#f2a97b"/>
@@ -171,7 +161,7 @@
             fill="#ff7aa2"/>
     </svg>
 
-    <h1>nirali will you be my valentine?</h1>
+    <h1>afton will you be my valentine?</h1>
 
     <section class="button-zone" id="zone">
       <button id="yesBtn">Yes</button>
@@ -184,9 +174,9 @@
     <section class="result" id="result">
       <h2>YAY! 🎉</h2>
       <img
-        class="fireworks"
-        src="https://media.giphy.com/media/26ufdipQqU2lhNA4g/giphy.gif"
-        alt="Fireworks"
+        class="kitty"
+        src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExbDV6NGM4aGxiZGJoNW42bmYzajg2NnNybDhra3dmMmV1aTIwZ2I5bCZlcD12MV9naWZzX3NlYXJjaCZjdD1n/RjVP4ZoxA3xeReLQT0/giphy.gif"
+        alt="Kitty"
       />
     </section>
   </main>
@@ -300,6 +290,7 @@
   </script>
 </body>
 </html>
+
 
 
 
