--- a/index.html
+++ b/index.html
@@ -134,6 +134,15 @@
 
   <main class="card">
 
+     <!-- MESSAGE -->
+
+    <h1>afton will you be my valentine?</h1>
+
+    <section class="button-zone" id="zone">
+      <button id="yesBtn">Yes</button>
+      <button id="noBtn">No</button>
+    </section>
+
     <!-- HINT -->
     <div class="hint" id="hint">“No” seems a bit shy 😈</div>
 
@@ -256,6 +265,7 @@
   </script>
 </body>
 </html>
+
 
 
 
